# percept

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
config/: percept_config.yaml
docs/: API.md  DEPLOYMENT.md  PROGRESS.md  SPECIFICATION.md  USER_GUIDE.md
percept/: __init__.py  cli.py
percept/capture/: __init__.py  realsense.py
percept/core/: __init__.py  adapter.py  config.py  pipeline.py  schema.py
percept/inference/: __init__.py
percept/normalization/: __init__.py
percept/persistence/: __init__.py  active_learning.py  database.py  embedding_store.py  review.py
percept/pipelines/: __init__.py  generic.py  person.py  router.py  vehicle.py
percept/segmentation/: __init__.py  depth_seg.py  fastsam.py  fusion.py  pointcloud_seg.py  ransac.py
percept/tracking/: __init__.py  bytetrack.py  gallery.py  mask_manager.py  reid.py
percept/utils/: __init__.py  adaptive.py  profiler.py
tests/: __init__.py  conftest.py
tests/hardware/: __init__.py  test_smoke.py
tests/integration/: __init__.py  test_multi_camera.py  test_pipeline_flow.py
tests/mocks/: __init__.py
tests/performance/: __init__.py  test_latency.py
tests/ui/: __init__.py  test_api.py  test_components.py
tests/unit/: test_adapter.py  test_capture.py  test_config.py  test_database.py  test_persistence.py  test_pipeline.py  test_pipelines.py  test_schema.py  test_segmentation.py  test_tracking.py
tests/utils/: test_adaptive.py  test_profiler.py
ui/: __init__.py  app.py  models.py
ui/api/: __init__.py  routes.py  websocket.py
ui/components/: __init__.py  frame_viewer.py  metrics_panel.py  pipeline_graph.py  stage_frames.py  stage_visualizers.py
ui/static/css/: style.css
ui/static/js/: app.js
ui/templates/: base.html  config_editor.html  dashboard.html  object_gallery.html  pipeline_view.html  review_queue.html
